# AIDrawAnalyser

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DATA_HANDLING.md  DRAWINGAI_LITE_COPILOT_INSTRUCTIONS.md  IMPROVEMENT_RECOMMENDATIONS.md  LICENSE_REVIEW.md  PROJECT_OVERVIEW.md  README.md  Run_Web.bat  TECHNICAL_DUE_DILIGENCE.md  app.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  ui_assembly.py
.github/workflows/: ci.yml  docs.yml
core/: _customer_data.py  ai_helpers.py  assembly.py  assembly_prompts.py  audit.py  azure_client.py  cost_tracker.py  demo_data.py  diff.py  drawing_cache.py  exceptions.py  extractor.py  history.py  master_matcher.py  notifications.py  ocr_fallback.py  pdf_utils.py  pn_utils.py  prompts.py  text_utils.py  validators.py
core/assembly/: __init__.py  api.py  material.py  pipeline.py  (+2 more)
data/: customer_mappings.json
demo_pack/: README.md  interactive_demo.html
docs/: deployment.md  index.md  sale-readiness.md  security.md  ux-recommendations.md
sample_drawings/: README.md
scripts/: README.md  compare_batch.py  find_hallucinated_standards.py  generate_sample_drawings.py  prepare_for_sharing.py  score_batch.py
storage/: pdf_report.py
tests/: test_ai_helpers.py  test_assembly_material.py  test_assembly_pipeline.py  test_audit_diff_notifications.py  test_azure_client.py  test_customer_data.py  test_drawing_cache.py  test_exceptions.py  test_history.py  test_master_matcher.py  test_pdf_report_optional.py  test_pdf_utils.py  test_pn_utils.py  test_text_utils.py  test_two_pass.py  test_validators.py
(+12 files in other folders)
